# Object-Tracker-For-A-Differential-Drive-Robot-using-ROS2-OpenCV-and-PIDController-

./: CMakeLists.txt  README.md  package.xml
config/: detector.yaml
include/tracking/: HeadController.hpp
src/: object_detector_main.cpp  object_tracker_main.cpp
src/tracking/: ObjectDetector.cpp
tests/: pid_test.cpp
tracking/include/tracking/: ObjectDetector.hpp  PIDController.hpp
tracking/launch/: tracking.launch.py
tracking/src/tracking/: HeadController.cpp  PIDController.cpp
tracking/tests/: CMakeLists.txt
tracking_msgs/: CMakeLists.txt  package.xml
